--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ ul {
   font-weight: 600;
 }
 .container {
-  margin: 50px auto;
+  margin: 50px auto 10px;
   background: #fff;
   max-width: 600px;
   box-shadow: 2px 2px 5px rgb(90, 89, 89, 0.5);
@@ -74,3 +74,8 @@ ul {
   float: right;
   margin-right: 20px;
 }
+.footer {
+  text-align: center;
+  font-weight: 500;
+}
+
